--- a/composer.json
+++ b/composer.json
@@ -2,38 +2,23 @@
     "name": "smallkingdev/worldtimeblocker",
     "description": "a simple plugin that blocks world time.",
     "type": "project",
-    "minimum-stability": "dev",
     "license": "MIT",
     "require": {
-        "pocketmine/pocketmine-mp": "^4.0.0",
-        "sylvrs/libmarshal": "^1.4.3",
-        "muqsit/simplepackethandler": "master"
+        "pocketmine/pocketmine-mp": "^5.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.2.0"
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/extension-installer": "^1.3"
     },
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "muqsit/simplepackethandler",
-                "version": "master",
-                "autoload": {
-                    "classmap": [
-                        "src/"
-                    ]
-                },
-                "source": {
-                    "url": "https://github.com/muqsit/simplepackethandler",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        }
-    ],
     "autoload": {
-        "psr-0": {
+        "psr-4": {
             "SmallkingDev\\WorldTimeBlocker\\": "src"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
         }
     }
 }
