--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,24 @@
 {
+    "name": "smallkingdev/worldtimeblocker",
+    "description": "a simple plugin that blocks world time.",
+    "type": "project",
+    "license": "MIT",
     "require": {
         "pocketmine/pocketmine-mp": "^5.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-strict-rules": "^1.5"
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/extension-installer": "^1.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "SmallkingDev\\WorldTimeBlocker\\": "src"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     }
 }
