--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "pocketmine/pocketmine-mp": "^5.0"
+        "pocketmine/pocketmine-mp": "^5.0|^4.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.4.6",
-        "phpstan/phpstan-strict-rules": "^1.0",
-        "phpstan/extension-installer": "^1.0"
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/extension-installer": "^1.3"
     },
     "autoload": {
         "psr-4": {
